--- a/.circle.yml
+++ b/.circle.yml
@@ -9,11 +9,13 @@ jobs:
       - image: circleci/golang:1.8
       - image: circleci/golang:1.9
 
-  tests:
-   override:
-    - go test -v ./abbrvs/...
-    - go test -v ./service/...
-    - go test -run=xXX -bench=.
+tests:
+ override:
+  - go test -cover ./abbrvs/...
+  - go test -cover ./service/...
+  - go test -v ./abbrvs/...
+  - go test -v ./service/...
+  - go test -run=xXX -bench=.
 
     #### TEMPLATE_NOTE: go expects specific checkout path representing url
     #### expecting it in the form of
