--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
+      - run: git clone github.com/{{ORG_NAME}}/{{REPO_NAME}} .
       - run: go test -cover ./abbrvs/...
       - run: go test -cover ./service/...
       - run: go test -v ./abbrvs/...
