Clone directory first

--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: git clone github.com/{{ORG_NAME}}/{{REPO_NAME}} .
+      - run: git clone github.com/influx6/workies .
       - run: go test -cover ./abbrvs/...
       - run: go test -cover ./service/...
       - run: go test -v ./abbrvs/...
