--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,7 @@ jobs:
       # specify the version
       - image: circleci/golang:1.8
       - image: circleci/golang:1.9
+    working_directory: /go/src/github.com/influx6/wordies
     steps:
       - checkout
       - run: go test -cover ./abbrvs/...
