Attempt to get benchmarking working in ci

--- a/circle.yml
+++ b/circle.yml
@@ -15,4 +15,4 @@ jobs:
       - run: go test -cover ./service/...
       - run: go test -v ./abbrvs/...
       - run: go test -v ./service/...
-      - run: go test -bench=. -run=xXX
+      - run: go test -bench=. -run=xXX ./services/...
