Add coverage to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,14 @@ script:
 
 jobs:
  include:
+  - stage: coverage
+    script: go test -cover ./abbrvs/...
+    script: go test -cover ./service/...
   - stage: test
     script: go test -v ./abbrvs/...
     script: go test -v ./service/...
   - stage: benchmarks
-    script: go test -run=xXX -bench . ./services/...
+    script: go test -run=xXX -bench=. ./service/...
   - stage: deploy
     script: echo "do nothing... :)"
 
