Update ci configs

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ script:
 jobs:
  include:
   - stage: coverage
-    script: go test -cover ./abbrvs/...
+    script: go test -cover ./internal/...
     script: go test -cover ./service/...
   - stage: test
-    script: go test -v ./abbrvs/...
+    script: go test -v ./internal/...
     script: go test -v ./service/...
   - stage: benchmarks
     script: go test -run=xXX -bench=. ./service/...
