--- a/circle.yml
+++ b/circle.yml
@@ -11,8 +11,8 @@ jobs:
     working_directory: /go/src/github.com/influx6/wordies
     steps:
       - checkout
-      - run: go test -cover ./abbrvs/...
+      - run: go test -cover ./internal/...
       - run: go test -cover ./service/...
-      - run: go test -v ./abbrvs/...
+      - run: go test -v ./internal/...
       - run: go test -v ./service/...
       - run: go test -bench=. -run=xXX ./service/...
