--- a/circle.yml
+++ b/circle.yml
@@ -16,3 +16,4 @@ jobs:
       - run: go test -v ./internal/...
       - run: go test -v ./service/...
       - run: go test -bench=. -run=xXX ./service/...
+      - run: go test -run=xXX -bench=.
